# distributedFileSystem

./: .gitmodules
APIs/: APIs.cabal  stack.yaml
APIs/.stack-work/install/x86_64-osx/lts-9.17/8.0.2/flag-cache/: APIs-0.1.0.0-JyPxge5NKmwDQJ8HDIe34f  HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  ListLike-4.5.1-JT9vOPxa6nQ3C7AGlE7SFG  QuickCheck-2.9.2-LvlomhGMxrFBkX1zwiWpQu  StateVar-1.1.0.4-5dJbnTVECtEAhfJXPZKdbO  aeson-1.1.2.0-7ssY6fy1GxZGXxTPcOtf2k  aeson-pretty-0.8.5-4ArTR5pkpZX48zloKnfDNn  aeson-qq-0.8.2-FPRnpHrQkWw9qd6h8j5SuD  ansi-terminal-0.6.3.1-3RTqikoQf47ajVD9m8zgB  ansi-wl-pprint-0.6.7.3-A79v826bgPr574HtaZPPqC  appar-0.1.4-DGWHHt2WRn9FI49prcwO9  asn1-encoding-0.9.5-G21ht92aEsbE6UbBIMkpKy  asn1-parse-0.9.4-9ug66l1mA7341K5DPj3fYu  asn1-types-0.3.2-9nZ3MW2CIvzFvF0TD7ErB1  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  attoparsec-0.13.1.0-3ql4hcH9pGfBAlE21oqFTQ  attoparsec-iso8601-1.0.0.0-CiauZZhskHA6jYy7CqE2mZ  auto-update-0.1.4-EmUvNdmhEju51bHrtaEMpz  base-compat-0.9.3-KeJp8zYMpcS9WibvTcxU22  base-orphans-0.6-AbJ3lKVXygDCG0eeQEv8Iu  base64-bytestring-1.0.0.1-4O9TExPPz6eI82Yj7L4SIj  basement-0.0.4-5G9Gc8Ht9hD9gydJD2I2TQ  bifunctors-5.4.2-KcF2f75KyQm5BjgJ8WkHCw  blaze-builder-0.4.0.2-LxClHUTiKUUAxWtvJ5Oeoy  blaze-html-0.9.0.1-GQ0yZtPYt2i2KdgnUEOA8p  blaze-markup-0.8.0.0-GsxkVbRgODkgUQDmmDVob  bson-0.3.2.3-Iehu4r10AM7DJbw1eJ6rnI  bson-generic-0.0.8-JZVOqBk1rL7HpOeD6vuRQ4  byteable-0.1.1-2lU1pexQSLj1KbNO17UifQ  byteorder-1.0.4-9NlNHkBVdo7F1prFVKrkcH  bytestring-builder-0.10.8.1.0-EUL7HUZoBoJHHdeLzmqEk9  cabal-doctest-1.0.3-424yp4GSQAZHQyNl3c0zus  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  case-insensitive-1.2.0.10-1D5OUKQ7UrJ7IpOe0di4Un  cereal-0.5.4.0-BsAGxfp8yAs3CiRo2E875e  clock-0.7.2-8dRNleB7rysIZAOReuhpZA  cmdargs-0.10.18-1MOxB7BXiUZGCBZB9Kx8qK  comonad-5.0.2-Fq9Xy9jdx6uIyJZn00E6Yc  conduit-1.2.12.1-CTYKTJmwFo81r4LrAKDD8i  conduit-extra-1.1.17-LHyPtC0nGlzDcgVxOcd4h4  (+135 more)
APIs/.stack-work/install/x86_64-osx/lts-9.17/8.0.2/lib/x86_64-osx-ghc-8.0.2/: libHSAPIs-0.1.0.0-JyPxge5NKmwDQJ8HDIe34f-ghc8.0.2.dylib  libHSbson-generic-0.0.8-JZVOqBk1rL7HpOeD6vuRQ4-ghc8.0.2.dylib
APIs/.stack-work/install/x86_64-osx/lts-9.17/8.0.2/lib/x86_64-osx-ghc-8.0.2/APIs-0.1.0.0-JyPxge5NKmwDQJ8HDIe34f/: Lib.dyn_hi  Lib.hi
APIs/.stack-work/install/x86_64-osx/lts-9.17/8.0.2/lib/x86_64-osx-ghc-8.0.2/bson-generic-0.0.8-JZVOqBk1rL7HpOeD6vuRQ4/Data/Bson/: Generic.dyn_hi  Generic.hi
APIs/.stack-work/install/x86_64-osx/lts-9.17/8.0.2/pkgdb/: bson-generic-0.0.8-JZVOqBk1rL7HpOeD6vuRQ4.conf  package.cache
APIs/app/: Main.hs
client/: cabal.config  client.cabal  docker-compose.yml  stack.yaml
client/src/: Lib.hs
directory-server/: directory-server.cabal  docker-compose.yml  stack.yaml
directory-server/.stack-work/downloaded/: F6DFIzytDPGl.http-archive
directory-server/src/: Lib.hs
file-server/: docker-compose.yml  file-server.cabal  stack.yaml
file-server-library/: LICENSE  README.md  file-server-library.cabal
file-server/.stack-work/docker/_home/: .ssh
file-server/src/: Lib.hs
locking-server/: README.md  docker-compose.yml  locking-server.cabal  stack.yaml
locking-server/src/: Lib.hs
(+4015 files in other folders)
